<resources>
    <string name="app_name">promeet</string>

    <string name="email">Email</string>
    <string name="display_name">Display Name</string>
    <string name="password">Password</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="log_out">Log Out</string>
    <string name="need_a_new_account">NEED A NEW ACCOUNT?</string>
    <string name="already_have_an_account">ALREADY HAVE AN ACCOUNT?</string>
    <string name="login">Login</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="default_status">Hi there, I\'m using ProMeet</string>
</resources>
